@@ -1290,7 +1290,7 @@ int libbde_volume_open_read(
 		     NULL,
 		     (int (*)(intptr_t *, intptr_t *, libfdata_vector_t *, libfcache_cache_t *, int, int, off64_t, size64_t, uint32_t, uint8_t, libcerror_error_t **)) &libbde_io_handle_read_sector,
 		     NULL,
-		     LIBFDATA_FLAG_DATA_HANDLE_NON_MANAGED,
+		     LIBFDATA_DATA_HANDLE_FLAG_NON_MANAGED,
 		     error ) != 1 )
 		{
 			libcerror_error_set(
